--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "jest",
     "dev": "nodemon server.js",
-    "lector": "echo \"I'm having an old friend for dinner.\""
+    "lecter": "echo \"I'm having an old friend for dinner.\""
   },
   "repository": {
     "type": "git",
@@ -20,7 +20,8 @@
   "homepage": "https://github.com/birdalicious/CannibalCookbook#readme",
   "dependencies": {
     "express": "^4.16.4",
-    "node-fetch": "^2.3.0"
+    "node-fetch": "^2.3.0",
+    "seedrandom": "^3.0.1"
   },
   "devDependencies": {
     "jest": "^24.1.0",
