--- a/package.json
+++ b/package.json
@@ -5,20 +5,20 @@
   "main": "server.js",
   "scripts": {
     "test": "jest",
-    "dev": "nodemon server.js",
+    "dev": "nodemon devServer.js",
     "pretest": "eslint --ignore-path .eslintignore .",
     "lecter": "echo \"I'm having an old friend for dinner.\""
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/birdalicious/CannibalCookbook.git"
+    "url": ""
   },
-  "author": "",
-  "license": "ISC",
+  "author": "████ ████",
+  "license": "CC BY-SA 4.0",
   "bugs": {
-    "url": "https://github.com/birdalicious/CannibalCookbook/issues"
+    "url": ""
   },
-  "homepage": "https://github.com/birdalicious/CannibalCookbook#readme",
+  "homepage": "",
   "dependencies": {
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
