--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "homepage": "",
   "dependencies": {
     "body-parser": "^1.18.3",
+    "eslint": "^5.16.0",
     "express": "^4.16.4",
     "node-fetch": "^2.3.0",
     "seedrandom": "^3.0.1"
